<resources>
    <string name="app_name" translatable="false">DePoker</string>
    <string name="reset">Reset score</string>
    <string name="settings">Settings</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="enterName">Please enter the names of the players</string>
    <string name="name">Name</string>
    <string name="changePlayersName">Change players names</string>
    <string name="nameChanged">Player names changed</string>
    <string name="about">About us</string>
    <string name="general">GENERAL</string>
    <string name="other">OTHER</string>
    <string name="play">Play</string>
    <string name="aboutSubTitle">A dice game</string>
    <string name="aboutText">
        DePoker is a game you play poker with dice.\n
        Made by :\n
        &#8226; Axel Cabanettes\n
        &#8226; Eric NGUYEN.\n
        S4 Group B.
    </string>
    <string name="learnMore">"Source code : \nhttps://github.com/Hydroxycarbamide/depoker"</string>
    <string name="selectNumberTurn">Select the number of turn</string>
    <string name="quitter">QUIT</string>
    <string name="lang">Change game language</string>
    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="three" translatable="false">3</string>
    <string name="chooseDice">Choose which dice to keep</string>
    <string name="bust" translatable="false">Bust</string>
    <string name="onePair">One Pair</string>
    <string name="twoPair">Two Pairs</string>
    <string name="threeKind">Three-of-a-kind</string>
    <string name="straight">Straight</string>
    <string name="fullHouse">Full House</string>
    <string name="fourKind">Four-of-a-kind</string>
    <string name="fiveKind">Five-of-a-kind</string>
    <string name="light">Night mode...</string>
    <string name="changeNumberTurn">Change the number of turn</string>
    <string name="roll">Roll the dice</string>
    <string name="player">Player</string>
    <string name="won">won !</string>
    <string name="noOne">"Nobody "</string>
    <string name="playAgain">Do you want to play again ?</string>
    <string name="next">Next player</string>
    <string name="end">End</string>
    <string name="turn">turn</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="launchApp">Please launch the game again for full theme application</string>
    <string name="changedTurn">Turn\'s number changed:</string>
    <string name="sureLeaving">Are you sure to leave the current game ?</string>
    <string name="loseProgress">If you leave here, you will lose all of your progress of the game and you will need to start over again.</string>
</resources>
